[gd_scene load_steps=9 format=3 uid="uid://bm52apdqmvtot"]

[ext_resource type="Script" path="res://Scripts/passport_content.gd" id="1_g8vof"]
[ext_resource type="Texture2D" uid="uid://gb2m615cpfcx" path="res://Arts/passport_id_page.png" id="1_ufxyg"]
[ext_resource type="Texture2D" uid="uid://bsga5covp28jn" path="res://Arts/arrow_right.png" id="2_c062v"]
[ext_resource type="Script" path="res://Scripts/arrow_icons.gd" id="3_a33ed"]
[ext_resource type="Texture2D" uid="uid://bsk6fv7i3i2x1" path="res://Arts/arrow_left.png" id="4_ggwbt"]
[ext_resource type="Script" path="res://Scripts/exit_icon.gd" id="6_57ong"]
[ext_resource type="FontFile" uid="uid://cthro4rqrdyu0" path="res://Fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="7_ye236"]
[ext_resource type="AudioStream" uid="uid://deuwgqpjk1kb3" path="res://Audios/page_flip.wav" id="8_dsuwn"]

[node name="PassportContent" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8vof")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0705882, 0.0980392, 1)

[node name="PageDisplay" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 16.0
offset_right = 885.0
offset_bottom = 528.0
texture = ExtResource("1_ufxyg")
stretch_mode = 5

[node name="ArrowRight" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 250.0
offset_right = 958.0
offset_bottom = 332.0
texture = ExtResource("2_c062v")
script = ExtResource("3_a33ed")

[node name="ArrowLeft" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 251.0
offset_right = 77.0
offset_bottom = 333.0
texture = ExtResource("4_ggwbt")
script = ExtResource("3_a33ed")

[node name="ExitIcon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 899.0
offset_top = 18.0
offset_right = 949.0
offset_bottom = 67.0
script = ExtResource("6_57ong")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ExitIcon"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0.62, 0.62, 0.62, 0.713726)
theme_override_fonts/font = ExtResource("7_ye236")
theme_override_font_sizes/font_size = 44
text = "X"

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_dsuwn")
